# gritcode

./: .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  README.org  TODO.org  application.cpp  application.h  block_manager.cpp  block_manager.h  chat_provider.h  claude_client.cpp  claude_client.h  claude_provider.cpp  claude_provider.h  fcn.desktop  grit.desktop  http_client.cpp  http_client.h  main_frame.cpp  main_frame.h  markdown_renderer.cpp  markdown_renderer.h  mcp_server.cpp  mcp_server.h  streaming_text_ctrl.cpp  streaming_text_ctrl.h  tools.cpp  tools.h  zen_client.cpp  zen_client.h  zen_provider.cpp  zen_provider.h
.github/workflows/: build.yml
cmake/: GenVersion.cmake  Info.plist.in
docs/: CODE_ANALYSIS.md  MCP_SERVER.md  gtk4-migration-notes.md
packaging/: gritcode.desktop  gritcode.metainfo.xml  hicolor-index.theme  wx_gritcode.desktop  wx_gritcode.rc
packaging/debian/: copyright  postinst
patches/: wx-overlay-scrollbar-fix.patch
scripts/: grit.py  mcp_client.py  mcp_inspector.py  mcp_shell.py  mcp_simple_test.py  stress_test.py  test_mcp.py
snap/: snapcraft.yaml
src/: app.cpp  app.h  block.h  chat_canvas.cpp  chat_canvas.h  chat_frame.cpp  chat_frame.h  clipboard.cpp  clipboard.h  csd.cpp  csd.h  curl_http.cpp  curl_http.h  debug_log.h  fake_data.cpp  fake_data.h  font.cpp  font.h  format_u8.h  gl_renderer.cpp  gl_renderer.h  glfw_window.cpp  glfw_window.h  gtk4_main.cpp  icons_deepseek.inc  icons_embedded.cpp  icons_opencode.inc  icons_plus.inc  icons_settings.inc  inline_parser.cpp  inline_parser.h  keychain.cpp  keychain.h  keysyms.h  macos_chrome.mm  main.cpp  markdown_renderer.cpp  markdown_renderer.h  mcp_server.cpp  mcp_server.h  (+40 more)
src/core/: application.cpp
src/mcp/: mcp_server.cpp  mcp_server.h
src/network/: http_client.cpp  http_client.h  zen_client.cpp  zen_client.h
src/ui/: main_frame.cpp  main_frame.h
